[package]
name = "lune-std-sqlite"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
mlua = { version = "0.9.7", features = ["luau"] }
rusqlite = { version = "0.31.0", features = ["bundled", "chrono", "serde_json"] }
lune-utils = { version = "0.1.0", path = "../lune-utils" }

[lints]
workspace = true
